--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       <!-- Поле для загрузки нового изображения на сайт -->
       <section class="img-upload">
         <div class="img-upload__wrapper">
-          <h2 class="img-upload__title  visually-hidden">Загрузка фотографии</h2>
-          <form class="img-upload__form" id="upload-select-image" autocomplete="off">
+          <h2 class="img-upload__title visually-hidden">Загрузка фотографии</h2>
+          <form class="img-upload__form" id="upload-select-image" autocomplete="off" method="post" action="https://30.javascript.pages.academy/kekstagram" enctype="multipart/form-data">
 
             <!-- Изначальное состояние поля для загрузки изображения -->
             <fieldset class="img-upload__start">
@@ -234,6 +234,8 @@
       </section>
     </template>
 <script src="js/functions.js"></script>
+<script src="vendor/pristine/pristine.min.js"></script>
 <script src="js/main.js" type="module"></script>
+
 </body>
 </html>
